# gbagame

./: Cargo.toml  install.sh
graphics/: arrow_up.aseprite  pokemon_no_001.aseprite
src/: MushroomMan.rs  loader.rs  main.rs
src/pokemon_data/: MushroomMan.json  MusroomMan.rs  mod.rs  moves.json  moves.rs  pokemon_struct.rs
