[package]
name = "agb_template"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.12.2"
lite-json = { version = "0.2.0", default-features = false, defaults = [
    "no_std",
] }

[profile.dev]
opt-level = 2
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true
